// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeveloperWebHooks should match a snapshot 1`] = `
<Component
  hasPadding={true}
>
  <Component
    flexColumn={true}
    hasBackground={true}
    hasPadding={true}
  >
    <Component>
      Manage Webhook Subscriptions
    </Component>
    <Component>
      <Component>
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore excepturi aliquam dolor, dolore placeat molestias illum quod quasi nihil. Modi consectetur praesentium sint quod qui quos soluta repellat porro minus.
      </Component>
      <Formik
        enableReinitialize={true}
        initialValues={
          Object {
            "applicationId": "",
          }
        }
        onSubmit={[Function]}
      >
        <Component />
      </Formik>
      <Component>
        <Component />
      </Component>
    </Component>
  </Component>
  <Memo()
    afterClose={[Function]}
    appId=""
    closeModal={[Function]}
    isUpdate={false}
    visible={false}
  />
</Component>
`;

exports[`DeveloperWebHooks should match a snapshot 2`] = `
<Component
  hasPadding={true}
>
  <Component
    flexColumn={true}
    hasBackground={true}
    hasPadding={true}
  >
    <Component>
      Manage Webhook Subscriptions
    </Component>
    <Component>
      <Component>
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore excepturi aliquam dolor, dolore placeat molestias illum quod quasi nihil. Modi consectetur praesentium sint quod qui quos soluta repellat porro minus.
      </Component>
      <Formik
        enableReinitialize={true}
        initialValues={
          Object {
            "applicationId": "",
          }
        }
        onSubmit={[Function]}
      >
        <Component />
      </Formik>
      <Component>
        <Component />
      </Component>
      <Component
        columns={
          Array [
            Object {
              "Header": "URL",
              "accessor": "url",
            },
            Object {
              "Cell": [Function],
              "Header": "Topics",
              "accessor": "topics",
            },
            Object {
              "Cell": [Function],
              "Header": "Customer",
              "accessor": "customer",
            },
            Object {
              "Header": "Test Webhook",
              "accessor": "test",
            },
            Object {
              "Header": "Edit",
              "accessor": "edit",
            },
          ]
        }
        data={
          Array [
            Object {
              "customer": Array [
                "string",
              ],
              "edit": <Unknown
                dataTest="edit-btn"
                onClick={[Function]}
                type="button"
                variant="primary"
              >
                Edit
              </Unknown>,
              "test": "Ping",
              "topics": Array [],
              "url": "string",
            },
          ]
        }
        loading={false}
        scrollable={true}
      />
    </Component>
  </Component>
  <Memo()
    afterClose={[Function]}
    appId=""
    closeModal={[Function]}
    isUpdate={false}
    visible={false}
  />
</Component>
`;
